load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "cpptrace",
    srcs = glob([
        "src/**/*.hpp",
        "src/**/*.cpp",
    ]),
    hdrs = glob([
        "include/cpptrace/*.hpp",
        "include/ctrace/*.h",
    ]),
    copts = [
        "-Wall",
        "-Wextra",
        "-Werror=return-type",
        "-Wundef",
        "-Wuninitialized",
        "-fPIC",
        "-std=c++11",
    ],
    includes = [
        "include",
        "src",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@libdwarf",
        "@libunwind",
    ],
)
